Fix layout breaking on mobile device

--- a/resources/bridge-bidding-styl-v13.css
+++ b/resources/bridge-bidding-styl-v13.css
@@ -1,6 +1,5 @@
 body {
 	font-family: calibri;
-	font-size: 30px;
 }
 #content {
 	margin: auto;
